// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationEditor widget renders all the different types of built-in slots 1`] = `
<div
  class="MuiPaper-root MuiAccordion-root makeStyles-accordion MuiAccordion-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    aria-disabled="false"
    aria-expanded="true"
    class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-expanded"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiAccordionSummary-content MuiAccordionSummary-expanded"
    >
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        Configuration
      </p>
    </div>
    <div
      aria-disabled="false"
      aria-hidden="true"
      class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiAccordionSummary-expanded MuiIconButton-edgeEnd"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-expandIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </div>
  <div
    class="MuiCollapse-root MuiCollapse-entered"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        >
          <div
            class="MuiAccordionDetails-root makeStyles-expansionPanelDetails"
            data-testid="configEditor"
          >
            <div
              class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="makeStyles-paperContent"
              >
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                    data-shrink="true"
                  >
                    stringTest
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiInput-input"
                      type="text"
                      value="string1"
                    />
                  </div>
                  <div
                    class="MuiFormHelperText-root MuiFormHelperText-filled"
                  >
                    <div>
                      stringTest
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-slotModeSwitch"
              />
            </div>
            <div
              class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="makeStyles-paperContent"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiInputLabel-shrink"
                    data-shrink="true"
                  >
                    fileLocationTest
                  </label>
                </div>
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      aria-label="file, url, or account picker"
                      class="MuiToggleButtonGroup-root"
                      role="group"
                    >
                      <button
                        aria-label="local file"
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal"
                        tabindex="0"
                        type="button"
                        value="file"
                      >
                        <span
                          class="MuiToggleButton-label"
                        >
                          File
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-label="url"
                        aria-pressed="true"
                        class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-selected"
                        tabindex="0"
                        type="button"
                        value="url"
                      >
                        <span
                          class="MuiToggleButton-label"
                        >
                          URL
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                    data-shrink="true"
                  >
                    Enter URL
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="urlInput"
                      type="text"
                      value="/path/to/my.file"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
                      >
                        <span>
                          Enter URL
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
                <p
                  class="MuiFormHelperText-root"
                >
                  fileLocationTest
                </p>
              </div>
              <div
                class="makeStyles-slotModeSwitch"
              />
            </div>
            <div
              class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="makeStyles-paperContent"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated"
                >
                  stringArrayTest
                </label>
                <ul
                  class="MuiList-root"
                >
                  <li
                    class="MuiListItem-root"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                          type="text"
                          value="string1"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                        >
                          <button
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="MuiListItem-root"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                          type="text"
                          value="string2"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                        >
                          <button
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </li>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
                    style="margin: 4px;"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Add item
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </ul>
                <p
                  class="MuiFormHelperText-root"
                >
                  stringArrayTest
                </p>
              </div>
              <div
                class="makeStyles-slotModeSwitch"
              />
            </div>
            <div
              class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="makeStyles-paperContent"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated"
                >
                  stringArrayMapTest
                </label>
                <div
                  class="MuiPaper-root MuiCard-root makeStyles-card MuiPaper-elevation8 MuiPaper-rounded"
                >
                  <div
                    class="MuiCardHeader-root"
                  >
                    <div
                      class="MuiCardHeader-content"
                    >
                      <span
                        class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
                      >
                        key1
                      </span>
                    </div>
                    <div
                      class="MuiCardHeader-action"
                    >
                      <button
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiCardContent-root"
                  >
                    <ul
                      class="MuiList-root"
                    >
                      <li
                        class="MuiListItem-root"
                      >
                        <div
                          class="MuiFormControl-root MuiTextField-root"
                        >
                          <div
                            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                          >
                            <input
                              aria-invalid="false"
                              class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                              type="text"
                              value="string1"
                            />
                            <div
                              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                            >
                              <button
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
                                tabindex="0"
                                type="button"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  class="MuiTouchRipple-root"
                                />
                              </button>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiListItem-root"
                      >
                        <div
                          class="MuiFormControl-root MuiTextField-root"
                        >
                          <div
                            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                          >
                            <input
                              aria-invalid="false"
                              class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                              type="text"
                              value="string2"
                            />
                            <div
                              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                            >
                              <button
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
                                tabindex="0"
                                type="button"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  class="MuiTouchRipple-root"
                                />
                              </button>
                            </div>
                          </div>
                        </div>
                      </li>
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
                        style="margin: 4px;"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label"
                        >
                          Add item
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </ul>
                    <p
                      class="MuiFormHelperText-root"
                    >
                      Values associated with entry key1
                    </p>
                  </div>
                </div>
                <div
                  class="MuiPaper-root MuiCard-root makeStyles-card MuiPaper-elevation8 MuiPaper-rounded"
                >
                  <div
                    class="MuiCardHeader-root"
                  >
                    <div
                      class="MuiCardHeader-content"
                    >
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                            placeholder="add new"
                            type="text"
                            value=""
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                          >
                            <button
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-disabled MuiButtonBase-disabled"
                              disabled=""
                              tabindex="-1"
                              type="button"
                            >
                              <span
                                class="MuiIconButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="MuiFormHelperText-root"
                >
                  stringArrayMapTest
                </p>
              </div>
              <div
                class="makeStyles-slotModeSwitch"
              />
            </div>
            <div
              class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="makeStyles-paperContent"
              >
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                    data-shrink="true"
                  >
                    numberTest
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiInput-input"
                      type="number"
                      value="88.5"
                    />
                  </div>
                  <div
                    class="MuiFormHelperText-root MuiFormHelperText-filled"
                  >
                    <div>
                      numberTest
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-slotModeSwitch"
              />
            </div>
            <div
              class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="makeStyles-paperContent"
              >
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                    data-shrink="true"
                  >
                    integerTest
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiInput-input"
                      type="number"
                      value="42"
                    />
                  </div>
                  <div
                    class="MuiFormHelperText-root MuiFormHelperText-filled"
                  >
                    <div>
                      integerTest
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-slotModeSwitch"
              />
            </div>
            <div
              class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="makeStyles-paperContent"
              >
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                    data-shrink="true"
                  >
                    colorTest
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                    style="color: rgb(57, 100, 148); border-right-width: 25px; border-right-style: solid; border-right-color: #396494;"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiInput-input"
                      type="text"
                      value="#396494"
                    />
                  </div>
                  <p
                    class="MuiFormHelperText-root MuiFormHelperText-filled"
                  >
                    colorTest
                  </p>
                </div>
              </div>
              <div
                class="makeStyles-slotModeSwitch"
              />
            </div>
            <div
              class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="makeStyles-paperContent"
              >
                <div
                  class="MuiFormControl-root"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-checked MuiCheckbox-checked MuiIconButton-colorSecondary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          checked=""
                          class="PrivateSwitchBase-input"
                          data-indeterminate="false"
                          type="checkbox"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      booleanTest
                    </span>
                  </label>
                  <p
                    class="MuiFormHelperText-root"
                  >
                    booleanTest
                  </p>
                </div>
              </div>
              <div
                class="makeStyles-slotModeSwitch"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigurationEditor widget renders with defaults of the PileupTrack schema 1`] = `
<div
  class="MuiPaper-root MuiAccordion-root makeStyles-accordion MuiAccordion-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    aria-disabled="false"
    aria-expanded="true"
    class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-expanded"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiAccordionSummary-content MuiAccordionSummary-expanded"
    >
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        Configuration
      </p>
    </div>
    <div
      aria-disabled="false"
      aria-hidden="true"
      class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiAccordionSummary-expanded MuiIconButton-edgeEnd"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-expandIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </div>
  <div
    class="MuiCollapse-root MuiCollapse-entered"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        >
          <div
            class="MuiAccordionDetails-root makeStyles-expansionPanelDetails"
            data-testid="configEditor"
          >
            <div
              class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="makeStyles-paperContent"
              >
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                    data-shrink="true"
                  >
                    maxFeatureScreenDensity
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiInput-input"
                      type="number"
                      value="0.3"
                    />
                  </div>
                  <div
                    class="MuiFormHelperText-root MuiFormHelperText-filled"
                  >
                    <div>
                      maximum features per pixel that is displayed in the view, used if byte size estimates not available
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-slotModeSwitch"
              />
            </div>
            <div
              class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="makeStyles-paperContent"
              >
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                    data-shrink="true"
                  >
                    fetchSizeLimit
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiInput-input"
                      type="number"
                      value="1000000"
                    />
                  </div>
                  <div
                    class="MuiFormHelperText-root MuiFormHelperText-filled"
                  >
                    <div>
                      maximum data to attempt to download for a given track, used if adapter doesn't specify one
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-slotModeSwitch"
              />
            </div>
            <div
              class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="makeStyles-paperContent"
              >
                <div
                  class="MuiFormControl-root"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
                    data-shrink="true"
                    for="callback-editor"
                  >
                    mouseover
                  </label>
                  <div
                    class="makeStyles-callbackEditor"
                    style="position: relative; text-align: left; white-space: pre-wrap; word-break: keep-all; box-sizing: border-box; padding: 0px; overflow: hidden;"
                  >
                    <textarea
                      autocapitalize="off"
                      autocomplete="off"
                      autocorrect="off"
                      class="npm__react-simple-code-editor__textarea"
                      data-gramm="false"
                      spellcheck="false"
                      style="margin: 0px; border: 0px; background: none; box-sizing: inherit; display: inherit; font-family: inherit; font-style: inherit; font-variant-ligatures: inherit; font-weight: inherit; letter-spacing: inherit; line-height: inherit; tab-size: inherit; text-indent: inherit; text-rendering: inherit; text-transform: inherit; white-space: inherit; word-break: inherit; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; resize: none; overflow: hidden; padding: 10px 10px 10px 10px;"
                    >
                      get(feature,'name')
                    </textarea>
                    <pre
                      aria-hidden="true"
                      style="margin: 0px; border: 0px; background: none; box-sizing: inherit; display: inherit; font-family: inherit; font-style: inherit; font-variant-ligatures: inherit; font-weight: inherit; letter-spacing: inherit; line-height: inherit; tab-size: inherit; text-indent: inherit; text-rendering: inherit; text-transform: inherit; white-space: inherit; word-break: inherit; position: relative; pointer-events: none; padding: 10px 10px 10px 10px;"
                    >
                      get(feature,'name')
                      <br />
                    </pre>
                    <style
                      type="text/css"
                    >
                      
/**
 * Reset the text fill color so that placeholder is visible
 */
.npm__react-simple-code-editor__textarea:empty {
  -webkit-text-fill-color: inherit !important;
}

/**
 * Hack to apply on some CSS on IE10 and IE11
 */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  /**
    * IE doesn't support '-webkit-text-fill-color'
    * So we use 'color: transparent' to make the text transparent on IE
    * Unlike other browsers, it doesn't affect caret color in IE
    */
  .npm__react-simple-code-editor__textarea {
    color: transparent !important;
  }

  .npm__react-simple-code-editor__textarea::selection {
    background-color: #accef7 !important;
    color: transparent !important;
  }
}

                    </style>
                  </div>
                  <p
                    class="MuiFormHelperText-root"
                  >
                    what to display in a given mouseover
                  </p>
                </div>
                <button
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <div
                class="makeStyles-slotModeSwitch"
              >
                <button
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
                  tabindex="0"
                  title="convert to regular value"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20.41,3C21.8,5.71 22.35,8.84 22,12C21.8,15.16 20.7,18.29 18.83,21L17.3,20C18.91,17.57 19.85,14.8 20,12C20.34,9.2 19.89,6.43 18.7,4L20.41,3M5.17,3L6.7,4C5.09,6.43 4.15,9.2 4,12C3.66,14.8 4.12,17.57 5.3,20L3.61,21C2.21,18.29 1.65,15.17 2,12C2.2,8.84 3.3,5.71 5.17,3M12.08,10.68L14.4,7.45H16.93L13.15,12.45L15.35,17.37H13.09L11.71,14L9.28,17.33H6.76L10.66,12.21L8.53,7.45H10.8L12.08,10.68Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiAccordion-root makeStyles-accordion MuiAccordion-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-expanded"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content MuiAccordionSummary-expanded"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    renderer
                  </p>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiAccordionSummary-expanded MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root makeStyles-expandIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root makeStyles-expansionPanelDetails"
                      >
                        <div
                          class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
                        >
                          <div
                            class="makeStyles-paperContent"
                          >
                            <div
                              class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                            >
                              <label
                                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                data-shrink="true"
                              >
                                Type
                              </label>
                              <div
                                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                              >
                                <div
                                  aria-haspopup="listbox"
                                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                                  role="button"
                                  tabindex="0"
                                >
                                  PileupRenderer
                                </div>
                                <input
                                  aria-hidden="true"
                                  class="MuiSelect-nativeInput"
                                  tabindex="-1"
                                  value="PileupRenderer"
                                />
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSelect-icon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M7 10l5 5 5-5z"
                                  />
                                </svg>
                              </div>
                              <p
                                class="MuiFormHelperText-root MuiFormHelperText-filled"
                              >
                                Type of renderer to use
                              </p>
                            </div>
                          </div>
                        </div>
                        <div
                          class="MuiFormGroup-root"
                        >
                          <div
                            class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
                          >
                            <div
                              class="makeStyles-paperContent"
                            >
                              <div
                                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                              >
                                <label
                                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                  data-shrink="true"
                                >
                                  color
                                </label>
                                <div
                                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                                  style="color: rgb(255, 0, 255); border-right-width: 25px; border-right-style: solid; border-right-color: #f0f;"
                                >
                                  <input
                                    aria-invalid="false"
                                    class="MuiInputBase-input MuiInput-input"
                                    type="text"
                                    value="#f0f"
                                  />
                                </div>
                                <p
                                  class="MuiFormHelperText-root MuiFormHelperText-filled"
                                >
                                  the color of each feature in a pileup alignment
                                </p>
                              </div>
                            </div>
                            <div
                              class="makeStyles-slotModeSwitch"
                            >
                              <button
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
                                tabindex="0"
                                title="convert to callback"
                                type="button"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  class="MuiTouchRipple-root"
                                />
                              </button>
                            </div>
                          </div>
                          <div
                            class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
                          >
                            <div
                              class="makeStyles-paperContent"
                            >
                              <div
                                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                              >
                                <label
                                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                  data-shrink="true"
                                >
                                  orientationType
                                </label>
                                <div
                                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                                >
                                  <div
                                    aria-haspopup="listbox"
                                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                                    role="button"
                                    tabindex="0"
                                  >
                                    fr
                                  </div>
                                  <input
                                    aria-hidden="true"
                                    class="MuiSelect-nativeInput"
                                    tabindex="-1"
                                    value="fr"
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSelect-icon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M7 10l5 5 5-5z"
                                    />
                                  </svg>
                                </div>
                                <div
                                  class="MuiFormHelperText-root MuiFormHelperText-filled"
                                >
                                  <div>
                                    read sequencer orienation. fr is normal "reads pointing at each other ---&gt; &lt;--- while some other sequencers can use other options
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="makeStyles-slotModeSwitch"
                            />
                          </div>
                          <div
                            class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
                          >
                            <div
                              class="makeStyles-paperContent"
                            >
                              <div
                                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                              >
                                <label
                                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                  data-shrink="true"
                                >
                                  displayMode
                                </label>
                                <div
                                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                                >
                                  <div
                                    aria-haspopup="listbox"
                                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                                    role="button"
                                    tabindex="0"
                                  >
                                    normal
                                  </div>
                                  <input
                                    aria-hidden="true"
                                    class="MuiSelect-nativeInput"
                                    tabindex="-1"
                                    value="normal"
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSelect-icon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M7 10l5 5 5-5z"
                                    />
                                  </svg>
                                </div>
                                <div
                                  class="MuiFormHelperText-root MuiFormHelperText-filled"
                                >
                                  <div>
                                    Alternative display modes
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="makeStyles-slotModeSwitch"
                            />
                          </div>
                          <div
                            class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
                          >
                            <div
                              class="makeStyles-paperContent"
                            >
                              <div
                                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                              >
                                <label
                                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                  data-shrink="true"
                                >
                                  minSubfeatureWidth
                                </label>
                                <div
                                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                                >
                                  <input
                                    aria-invalid="false"
                                    class="MuiInputBase-input MuiInput-input"
                                    type="number"
                                    value="0.7"
                                  />
                                </div>
                                <div
                                  class="MuiFormHelperText-root MuiFormHelperText-filled"
                                >
                                  <div>
                                    the minimum width in px for a pileup mismatch feature. use for increasing/decreasing mismatch marker widths when zoomed out, e.g. 0 or 1
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="makeStyles-slotModeSwitch"
                            />
                          </div>
                          <div
                            class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
                          >
                            <div
                              class="makeStyles-paperContent"
                            >
                              <div
                                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                              >
                                <label
                                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                  data-shrink="true"
                                >
                                  maxHeight
                                </label>
                                <div
                                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                                >
                                  <input
                                    aria-invalid="false"
                                    class="MuiInputBase-input MuiInput-input"
                                    type="number"
                                    value="1200"
                                  />
                                </div>
                                <div
                                  class="MuiFormHelperText-root MuiFormHelperText-filled"
                                >
                                  <div>
                                    the maximum height to be used in a pileup rendering
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="makeStyles-slotModeSwitch"
                            />
                          </div>
                          <div
                            class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
                          >
                            <div
                              class="makeStyles-paperContent"
                            >
                              <div
                                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                              >
                                <label
                                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                  data-shrink="true"
                                >
                                  maxClippingSize
                                </label>
                                <div
                                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                                >
                                  <input
                                    aria-invalid="false"
                                    class="MuiInputBase-input MuiInput-input"
                                    type="number"
                                    value="10000"
                                  />
                                </div>
                                <div
                                  class="MuiFormHelperText-root MuiFormHelperText-filled"
                                >
                                  <div>
                                    the max clip size to be used in a pileup rendering
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="makeStyles-slotModeSwitch"
                            />
                          </div>
                          <div
                            class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
                          >
                            <div
                              class="makeStyles-paperContent"
                            >
                              <div
                                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                              >
                                <label
                                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                  data-shrink="true"
                                >
                                  height
                                </label>
                                <div
                                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                                >
                                  <input
                                    aria-invalid="false"
                                    class="MuiInputBase-input MuiInput-input"
                                    type="number"
                                    value="7"
                                  />
                                </div>
                                <div
                                  class="MuiFormHelperText-root MuiFormHelperText-filled"
                                >
                                  <div>
                                    the height of each feature in a pileup alignment
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="makeStyles-slotModeSwitch"
                            >
                              <button
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
                                tabindex="0"
                                title="convert to callback"
                                type="button"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  class="MuiTouchRipple-root"
                                />
                              </button>
                            </div>
                          </div>
                          <div
                            class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
                          >
                            <div
                              class="makeStyles-paperContent"
                            >
                              <div
                                class="MuiFormControl-root"
                              >
                                <label
                                  class="MuiFormControlLabel-root"
                                >
                                  <span
                                    aria-disabled="false"
                                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
                                  >
                                    <span
                                      class="MuiIconButton-label"
                                    >
                                      <input
                                        class="PrivateSwitchBase-input"
                                        data-indeterminate="false"
                                        type="checkbox"
                                        value=""
                                      />
                                      <svg
                                        aria-hidden="true"
                                        class="MuiSvgIcon-root"
                                        focusable="false"
                                        viewBox="0 0 24 24"
                                      >
                                        <path
                                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                        />
                                      </svg>
                                    </span>
                                    <span
                                      class="MuiTouchRipple-root"
                                    />
                                  </span>
                                  <span
                                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                                  >
                                    noSpacing
                                  </span>
                                </label>
                                <p
                                  class="MuiFormHelperText-root"
                                >
                                  remove spacing between features
                                </p>
                              </div>
                            </div>
                            <div
                              class="makeStyles-slotModeSwitch"
                            />
                          </div>
                          <div
                            class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
                          >
                            <div
                              class="makeStyles-paperContent"
                            >
                              <div
                                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                              >
                                <label
                                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                  data-shrink="true"
                                >
                                  largeInsertionIndicatorScale
                                </label>
                                <div
                                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                                >
                                  <input
                                    aria-invalid="false"
                                    class="MuiInputBase-input MuiInput-input"
                                    type="number"
                                    value="10"
                                  />
                                </div>
                                <div
                                  class="MuiFormHelperText-root MuiFormHelperText-filled"
                                >
                                  <div>
                                    scale at which to draw the large insertion indicators (bp/pixel)
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="makeStyles-slotModeSwitch"
                            />
                          </div>
                          <div
                            class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
                          >
                            <div
                              class="makeStyles-paperContent"
                            >
                              <div
                                class="MuiFormControl-root"
                              >
                                <label
                                  class="MuiFormControlLabel-root"
                                >
                                  <span
                                    aria-disabled="false"
                                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
                                  >
                                    <span
                                      class="MuiIconButton-label"
                                    >
                                      <input
                                        class="PrivateSwitchBase-input"
                                        data-indeterminate="false"
                                        type="checkbox"
                                        value=""
                                      />
                                      <svg
                                        aria-hidden="true"
                                        class="MuiSvgIcon-root"
                                        focusable="false"
                                        viewBox="0 0 24 24"
                                      >
                                        <path
                                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                        />
                                      </svg>
                                    </span>
                                    <span
                                      class="MuiTouchRipple-root"
                                    />
                                  </span>
                                  <span
                                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                                  >
                                    mismatchAlpha
                                  </span>
                                </label>
                                <p
                                  class="MuiFormHelperText-root"
                                >
                                  Fade low quality mismatches
                                </p>
                              </div>
                            </div>
                            <div
                              class="makeStyles-slotModeSwitch"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigurationEditor widget renders with just the required model elements 1`] = `
<div
  class="MuiPaper-root MuiAccordion-root makeStyles-accordion MuiAccordion-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    aria-disabled="false"
    aria-expanded="true"
    class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-expanded"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiAccordionSummary-content MuiAccordionSummary-expanded"
    >
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        Configuration
      </p>
    </div>
    <div
      aria-disabled="false"
      aria-hidden="true"
      class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiAccordionSummary-expanded MuiIconButton-edgeEnd"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-expandIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </div>
  <div
    class="MuiCollapse-root MuiCollapse-entered"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        >
          <div
            class="MuiAccordionDetails-root makeStyles-expansionPanelDetails"
            data-testid="configEditor"
          >
            <div
              class="MuiPaper-root makeStyles-paper MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="makeStyles-paperContent"
              >
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                    data-shrink="true"
                  >
                    foo
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiInput-input"
                      type="text"
                      value="bar"
                    />
                  </div>
                  <div
                    class="MuiFormHelperText-root MuiFormHelperText-filled"
                  >
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-slotModeSwitch"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
